--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -20,6 +23,7 @@
     "ethers": "^6.12.0",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
+    "framer-motion": "^11.2.11",
     "next": "14.2.3",
     "pino-pretty": "^11.2.1",
     "react": "^18",
