--- a/back/package.json
+++ b/back/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
+    "@openzeppelin/test-helpers": "^0.5.16",
     "dotenv": "^16.4.5",
     "erc721a": "^4.3.0"
   }
